feat: Cluster docker-compose, gRPC template 구현